--- a/cards.css
+++ b/cards.css
@@ -1,139 +1,156 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
-.wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  justify-content: center;
-  padding: 2rem;
-  background-color: #0e0e10;
-  font-family: "Poppins", sans-serif;
+* {
+  box-sizing: border-box;
+    margin: 0;
+  padding: 0;
 }
-
-.card {
-  position: relative;
-  width: 300px;
-  height: 400px;
-  perspective: 1500px;
-}
-
-.card .more {
-  display: none;
-}
-
-.card .more:checked ~ .content {
-  transform: rotateY(180deg);
-}
-
-.card .content {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.8s ease;
-  transform-style: preserve-3d;
-}
-
-.card .front,
-.card .back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 1rem;
-  overflow: hidden;
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  background: #030303;
   color: white;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
-
-.card .front {
-  background-size: cover;
+.background {
+  background-image: linear-gradient(to bottom,transparent 40%,rgba(0,0,0,0.95) 70%, #020202), url("https://i.imgur.com/9KVO1Ok.jpg");
+  width: 100vw;
+  height: 100vh;
+  background-position: top;
+  z-index: 1;
+  position: relative;
+  box-shadow: 0 50px 50px black;
+}
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  z-index: 100;
+  font-family: 'Gruppo', cursive;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  font-size: 3rem;
+  color: white;
+  text-shadow: 2px 2px 5px;
+}
+.layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-
-.card .front .inner {
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
+.layer-1 {
+  background-image: linear-gradient(to bottom,transparent 50%,rgba(0, 0, 0,0.85) 70%, #020202), url("https://i.imgur.com/bwEm8WB.png");
+  z-index: 70;
+}
+.layer-2 {
+  background-image: linear-gradient(to bottom,transparent 30%,rgba(0,0,0,0.9) 80%, #020202), url("https://i.imgur.com/XxTPjmC.png");
+  z-index: 80;
+}
+.layer-3 {
+  background-image: 
+    linear-gradient(to bottom,transparent 60%,rgba(0, 0,0,0.85), #020202), url("https://i.imgur.com/F4xnzjU.png");
+  z-index: 90;
+}
+.content {
+  font-size: 1.2rem;
+  line-height: 1.7;
+  position: relative;
+  background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+  background-size: cover;
+  background-attachment: fixed;
+}
+.text {
+  padding: 4rem 10rem 20rem 40rem;
+}
+.rock {
+  background-image: url("https://i.imgur.com/F4xnzjU.png");
+  width: 100vw;
+  height: 100vh;
   position: absolute;
   bottom: 0;
-  width: 100%;
-  padding: 1.5rem;
-  box-sizing: border-box;
+  left: 0;
+  background-position: left center;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+.rocks {
+  position: absolute;
+  z-index: 1000;
+}
+.rock-1 {
+ width: 100px;
+ height: 100px;
+ left: 10%;
+ top: 50%;
+}
+.rock-2 {
+  width: 120px;
+  height: 120px;
+  left: 20%;
+  top: 30%;
+}
+.rock-3 {
+  width: 80px;
+  height: 80px;
+  left: 10%;
+  bottom: 20%;
+}
+.rock-4 {
+  width: 130px;
+  height: 130px;
+  bottom: 0;
+  left: 31%;
+}
+.rock-5 {
+  width: 110px;
+  height: 110px;
+  bottom: 0;
+  left: 5%;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+.rock-6 {
+  width: 70px;
+  height: 70px;
+  bottom: 30%;
+  left: 20%;
+}
+.rock-7 {
+  width: 120px;
+  height: 120px;
+  bottom: 35%;
+  left: 15%;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+.rock-8 {
+  width: 50px;
+  height: 50px;
+  bottom: 25%;
+  left: 25%;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+.rock-9 {
+  width: 70px;
+  height: 70px;
+  bottom: 35%;
+  left: 30%;
 }
 
-.card .front h2 {
-  margin: 0 0 0.5rem;
-  font-size: 1.5rem;
-  font-weight: 600;
+@media only screen and (max-width: 1200px) {
+  h1 {
+    font-size: 2rem;
+    letter-spacing: 0.1rem;
+    text-align: center;
+  }
+  .rocks, .rock {
+    display: none;
+  }
+  .text {
+    padding: 0 3rem 5rem 3rem;
+  }
 }
-
-.card .front .rating {
-  margin: 0.5rem 0;
-}
-
-.card .front .rating i {
-  color: #ffc107;
-  margin-right: 0.2rem;
-}
-
-.card .front .button {
-  background: #1f80e0;
-  border: none;
-  padding: 0.5rem 1rem;
-  margin-top: 1rem;
-  cursor: pointer;
-  border-radius: 0.5rem;
-  font-weight: 600;
-  color: white;
-  display: inline-block;
-  font-family: "Poppins", sans-serif;
-}
-
-.card .back {
-  background: #1a1a1d;
-  transform: rotateY(180deg);
-  overflow-y: auto;
-}
-
-.card .back .inner {
-  padding: 1.5rem;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-}
-
-.card .back .info {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1rem;
-}
-
-.card .back .info span {
-  font-weight: 600;
-  margin-right: 0.5rem;
-}
-
-.card .back .description {
-  margin-top: 1rem;
-  font-size: 0.9rem;
-  line-height: 1.4;
-  color: #ccc;
-}
-
-.card .back .button {
-  align-self: center;
-  background: #1f80e0;
-  border: none;
-  padding: 0.5rem 1.2rem;
-  cursor: pointer;
-  border-radius: 0.5rem;
-  font-weight: 600;
-  color: white;
-  display: inline-block;
-  margin-top: auto;
-  transition: background-color 0.3s ease;
-  font-family: "Poppins", sans-serif;
-}
-
-.card .back .button:hover {
-  background: #1761b3;
-}/*# sourceMappingURL=cards.css.map */
