--- a/cards.css
+++ b/cards.css
@@ -1,156 +1,155 @@
 * {
-  box-sizing: border-box;
     margin: 0;
-  padding: 0;
-}
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
-  background: #030303;
-  color: white;
-}
-.background {
-  background-image: linear-gradient(to bottom,transparent 40%,rgba(0,0,0,0.95) 70%, #020202), url("https://i.imgur.com/9KVO1Ok.jpg");
-  width: 100vw;
-  height: 100vh;
-  background-position: top;
-  z-index: 1;
-  position: relative;
-  box-shadow: 0 50px 50px black;
-}
-h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); 
-  z-index: 100;
-  font-family: 'Gruppo', cursive;
-  text-transform: uppercase;
-  letter-spacing: 0.5rem;
-  font-size: 3rem;
-  color: white;
-  text-shadow: 2px 2px 5px;
-}
-.layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.layer-1 {
-  background-image: linear-gradient(to bottom,transparent 50%,rgba(0, 0, 0,0.85) 70%, #020202), url("https://i.imgur.com/bwEm8WB.png");
-  z-index: 70;
-}
-.layer-2 {
-  background-image: linear-gradient(to bottom,transparent 30%,rgba(0,0,0,0.9) 80%, #020202), url("https://i.imgur.com/XxTPjmC.png");
-  z-index: 80;
-}
-.layer-3 {
-  background-image: 
-    linear-gradient(to bottom,transparent 60%,rgba(0, 0,0,0.85), #020202), url("https://i.imgur.com/F4xnzjU.png");
-  z-index: 90;
-}
-.content {
-  font-size: 1.2rem;
-  line-height: 1.7;
-  position: relative;
-  background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
-  background-size: cover;
-  background-attachment: fixed;
-}
-.text {
-  padding: 4rem 10rem 20rem 40rem;
-}
-.rock {
-  background-image: url("https://i.imgur.com/F4xnzjU.png");
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-position: left center;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-}
-.rocks {
-  position: absolute;
-  z-index: 1000;
-}
-.rock-1 {
- width: 100px;
- height: 100px;
- left: 10%;
- top: 50%;
-}
-.rock-2 {
-  width: 120px;
-  height: 120px;
-  left: 20%;
-  top: 30%;
-}
-.rock-3 {
-  width: 80px;
-  height: 80px;
-  left: 10%;
-  bottom: 20%;
-}
-.rock-4 {
-  width: 130px;
-  height: 130px;
-  bottom: 0;
-  left: 31%;
-}
-.rock-5 {
-  width: 110px;
-  height: 110px;
-  bottom: 0;
-  left: 5%;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-}
-.rock-6 {
-  width: 70px;
-  height: 70px;
-  bottom: 30%;
-  left: 20%;
-}
-.rock-7 {
-  width: 120px;
-  height: 120px;
-  bottom: 35%;
-  left: 15%;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-}
-.rock-8 {
-  width: 50px;
-  height: 50px;
-  bottom: 25%;
-  left: 25%;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-}
-.rock-9 {
-  width: 70px;
-  height: 70px;
-  bottom: 35%;
-  left: 30%;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-@media only screen and (max-width: 1200px) {
-  h1 {
-    font-size: 2rem;
-    letter-spacing: 0.1rem;
+body {
+    font-family: 'Space Mono', monospace;
+    color: #fff;
+    overflow-x: hidden;
+    background: #000;
+}
+
+.parallax-container {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    perspective: 1px;
+}
+
+.parallax-layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+}
+
+.layer-0 {
+    background: #000000;
+    z-index: -5;
+}
+
+.layer-1 {
+    background-image: url('https://images.unsplash.com/photo-1604423203943-54721eff418a?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    z-index: -4;
+    opacity: 0.5;
+}
+
+.layer-2 {
+    background-image: url('https://images.unsplash.com/photo-1543722530-d2c3201371e7?q=80&w=1174&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    z-index: -3;
+    opacity: 0.6;
+}
+
+.layer-3 {
+    background-image: url('https://images.unsplash.com/photo-1604423477447-70dd36d47c61?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    z-index: -2;
+    opacity: 0.7;
+}
+
+.layer-4 {
+    background-image: url('https://cdn.wallpapersafari.com/6/29/qtCfLj.jpg');
+    z-index: -1;
+    opacity: 0.8;
+}
+
+.parallax-item {
+    position: absolute;
+    z-index: 10;
+}
+
+.planet-1 {
+    width: 400px;
+    top: 20%;
+    left: 3%;
+    background-image: url('https://www.freeiconspng.com/uploads/moon-planet-space-astronomy-png-22.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 300px;
+}
+
+.planet-2 {
+    width: 400px;
+    bottom: 20%;
+    right: -5%;
+    background-image: url('https://www.freeiconspng.com/uploads/planet-icon-png-29.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 200px;
+}
+
+.asteroid-1 {
+    width: 200px;
+    top: 50%;
+    right: 5%;
+    background-image: url('https://img.pikbest.com/origin/09/14/22/2pIkbEsTGpIkbEsTsAp.png!w700wp');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 100px;
+}
+
+.asteroid-2 {
+    width: 130px;
+    top: 40%;
+    left: 20%;
+    background-image: url('https://www.freeiconspng.com/uploads/planet-icon-png-29.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 500px;
+}
+
+.spaceship {
+    width: 150px;
+    top: 10%;
+    left: 50%;
+    background-image: url('https://www.freeiconspng.com/uploads/space-satellite-png-10.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 150px;
+}
+
+.content-section {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 20;
+}
+
+.content-box {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 3rem;
+    border-radius: 15px;
+    max-width: 800px;
+    margin: 0 auto;
     text-align: center;
-  }
-  .rocks, .rock {
-    display: none;
-  }
-  .text {
-    padding: 0 3rem 5rem 3rem;
-  }
+    backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+h1, h2 {
+    font-family: 'Orbitron', sans-serif;
+    margin-bottom: 1rem;
+    color: #4fc3f7;
+}
+
+p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
+
+@media (max-width: 768px) {
+    .parallax-item {
+        display: none;
+    }
+    
+    .content-box {
+        padding: 2rem;
+    }
 }
